--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,12 @@ pytest>=7.0.0
 pylint>=2.17.0
 black>=23.0.0
 mypy>=1.0.0
+
+# Testing dependencies
+pytest-cov>=4.1.0           # For test coverage reporting
+pytest-mock>=3.12.0         # For mocking database connections and external dependencies
+pytest-xdist>=3.5.0         # For parallel test execution
+pytest-sugar>=1.0.0         # For better test progress visualization
+factory-boy>=3.3.0          # For generating test data factories for the different card types
+sqlalchemy-utils>=0.41.1    # For database testing utilities
+faker>=19.3.0               # Works with factory-boy for generating realistic test data
